<resources>
    <string name="app_name">JApp</string>
    <string name="music_name">Wheat Music</string>
    <string name="transition_cover">CoverTransition</string>
    <string name="transition_album">AlbumTransition</string>
    <string name="empty">空空如也  …</string>
    <string name="net_error">网络错误  …</string>
    <string name="load_error">加载错误  …</string>
    <string name="loading">努力加载中  …</string>
    <string name="unknow_error">未知错误  …</string>
    <string name="tab_listener_song">听歌</string>
    <string name="tab_my_save">收藏</string>
    <string name="tab_discover">发现</string>
    <string name="personalized_dress">个性装扮</string>
    <string name="help_feedback">帮助与反馈</string>
    <string name="timed_off">定时关闭</string>
    <string name="about_me">关于我</string>
    <string name="night_mode">夜间模式</string>
    <string name="single_song">单曲</string>
    <string name="song_list">歌单</string>
    <string name="mv">MV</string>
    <string name="album">专辑</string>
    <string name="play_all">播放全部</string>
    <string name="download_all">全部下载</string>
    <string name="start_download">开始下载 …</string>
    <string name="in_download_queue">已经加入下载队列 …</string>
    <string name="download_failed">下载失败</string>
    <string name="download_music">下载音乐</string>
    <string name="pause">暂停</string>
    <string name="start">开始</string>
    <string name="tasks_manager_demo_status_loading">加载中&#8230;</string>
    <string name="tasks_manager_demo_status_pending">队列中</string>
    <string name="tasks_manager_demo_status_connected">已连接上</string>
    <string name="tasks_manager_demo_status_progress">下载中&#8230;</string>
    <string name="tasks_manager_cache_status_progress">下载中&#8230;</string>
    <string name="tasks_manager_demo_status_downloading" formatted="false">已下载%d %%</string>
    <string name="tasks_manager_cache_status_downloading" formatted="false">已缓存%d %%</string>
    <string name="tasks_manager_demo_status_error">出错</string>
    <string name="tasks_manager_demo_status_paused">暂停</string>
    <string name="tasks_manager_demo_status_completed">下载完成</string>
    <string name="tasks_manager_cache_status_completed">缓存完成</string>
    <string name="tasks_manager_demo_status_not_downloaded">未下载</string>
    <string name="tasks_manager_cache_status_not_downloaded">未缓存</string>


    <string name="query_lrc">查找歌词中 …</string>
    <string name="read_history">最近阅读</string>
    <string name="go_to_login">点击登录</string>
    <string name="like">喜欢</string>
    <string name="download">下载</string>
    <string name="collect">收藏</string>
    <string name="about">关于</string>
    <string name="order_play">顺序播放</string>
    <string name="random_play">随机播放</string>
    <string name="single_play">单曲循环</string>
    <string name="local_no_need_download">~~本地歌曲，无需下载~~</string>
    <string name="song_has_download">歌曲已经下载啦~~ (*^▽^*) </string>
    <string name="local_music">本地音乐</string>
    <string name="scan_music">扫描音乐</string>
    <string name="one_key_delete">一键删除</string>
    <string name="has_downloaded">已下载</string>
    <string name="downloading">下载中</string>
    <string name="recent_play">最近播放</string>
    <string name="recent_read">最近阅读</string>
    <string name="clear_all">全部清除</string>
    <string name="my_love">我喜欢的音乐</string>
    <string name="poetry_love">我喜欢的诗词</string>
    <string name="poetry_note">诗词笔记</string>
    <string name="poetry_directory">为你喜欢的诗词创建一个目录吧</string>
    <string name="create_song_list">创建的歌单</string>
    <string name="collect_song_list">收藏的歌单</string>
    <string name="no_collect_song_list">还没有收藏的歌单啦</string>
    <string name="no_local_music">还没有发现本地音乐啦</string>
    <string name="singer">歌手</string>
    <string name="hot_songs">热歌精选</string>
    <string name="song_style">我的风格</string>
    <string name="book_recommend">每日推书</string>
    <string name="poetry_and_song">诗＆歌</string>
    <string name="single_song_recommend">单曲推荐</string>
    <string name="change_range">换一批</string>
    <string name="create_new_song_list">创建新歌单</string>
    <string name="input_song_list_title">输入歌单标题</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="author_recommend">推荐歌单</string>
    <string name="song_list_squire">全部歌单</string>
    <string name="chinese">华语精选</string>
    <string name="pure_music">纯音乐</string>
    <string name="japanese">日语</string>
    <string name="english">英语</string>
    <string name="antique">古风</string>
    <string name="folk">民谣</string>
    <string name="classic">经典老歌</string>
    <string name="quite">安静</string>
    <string name="cure">治愈</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="man">男歌手</string>
    <string name="woman">女歌手</string>
    <string name="other_singer">其他歌手</string>
    <string name="hot_singer">热门歌手</string>
    <string name="search_history">搜索历史</string>
    <string name="recommend_search">推荐搜索</string>
    <string name="hot_search">热门搜索</string>
    <string name="no_search_history">暂无搜索记录</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="input_password">请输入密码</string>
    <string name="login_is_register">首次登录即代表注册</string>
    <string name="forget_password">忘记密码？</string>
    <string name="to_login">立即登录</string>
    <string name="public_time">发行于</string>
    <string name="today_recommend">推荐</string>
    <string name="created_songList">创建的歌单</string>
    <string name="my_love_songs">我喜欢的音乐</string>
    <string name="mime_music">我的音乐</string>
    <string name="total_listen_songs">累计听歌</string>
    <string name="search_content_hint">搜索歌曲/歌手/专辑</string>
    <string name="song_num">%1$d 首</string>
    <string name="default_num">0 首</string>
    <string name="lrc_empty">暂无歌词…</string>
    <string name="recommend_singer">推\n荐\n歌\n手</string>
    <string name="search">搜索</string>
    <string name="unknown_singer">未知歌手</string>
    <string name="unknown">未知</string>
    <string name="play_time_start">00:00</string>
    <string name="play_mode">%1$s("%2$d")</string>
</resources>