<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/playingBgIv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1f000000"
        android:scaleType="centerCrop"
        android:src="@color/card_dark"
        android:transitionName="@string/transition_cover"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="#1f000000" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1f000000" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/dp_120"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerTitle"
        app:layout_constraintVertical_bias="0.0" />


    <LinearLayout
        android:id="@+id/detailView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/progressTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/play_time_start"
                android:textColor="@color/white"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <SeekBar
                android:id="@+id/progressSb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxHeight="1.5dp"
                android:minHeight="1.5dp"
                android:progress="0"
                android:progressDrawable="@drawable/play_progress_bar"
                android:secondaryProgress="0"
                android:thumb="@drawable/white_dot" />

            <TextView
                android:id="@+id/durationTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/play_time_start"
                android:textColor="@color/white_50p"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="@dimen/dp_8"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/playModeIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/play_mode"
                android:gravity="center"
                android:src="@drawable/play_mode_levels" />

            <ImageView
                android:id="@+id/prevPlayIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/play_btn_prev_selector" />

            <ImageView
                android:id="@+id/playPauseIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/play_btn_play_pause_selector" />

            <ImageView
                android:id="@+id/nextPlayIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/play_btn_next_selector" />

            <ImageView
                android:id="@+id/playQueueIv"
                android:layout_width="@dimen/dp_26"
                android:layout_height="@dimen/dp_26"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_playlist_play" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottomOpView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/dp_24">

            <ImageView
                android:id="@+id/collectIv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/collect"
                android:src="@drawable/selector_love_song" />

            <!--            <ImageView-->
            <!--                android:id="@+id/equalizerIv"-->
            <!--                android:layout_width="24dp"-->
            <!--                android:layout_height="24dp"-->
            <!--                android:layout_gravity="center"-->
            <!--                android:layout_weight="1"-->
            <!--                android:background="?android:attr/selectableItemBackgroundBorderless"-->
            <!--                android:contentDescription="@string/equalizer"-->
            <!--                android:gravity="center"-->
            <!--                android:src="@drawable/ic_equalizer"-->
            <!--                android:visibility="gone" />-->


            <ImageView
                android:id="@+id/downloadIv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/download" />

            <ImageView
                android:id="@+id/shareIv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_share_white" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_share_white" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/playerTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_16"
            android:src="@drawable/ic_arrow_left" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16"
                tools:text="歌曲名歌曲名歌曲名歌曲名歌曲名歌曲名歌曲名歌曲名歌曲名歌曲名歌曲歌曲名歌曲名歌曲" />

            <TextView
                android:id="@+id/subTitleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_4"
                android:gravity="center"
                android:lines="1"
                android:textColor="@color/whiteAlpha54"
                android:textSize="@dimen/sp_12"
                tools:text="@string/unknown_singer" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>